<resources>
    <string name="app_name">MovieFinder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_logo">image_logo</string>
    <string name="title_today_movie">Watch This Today !</string>
    <string name="title_movie">Title Movie!</string>
    <string name="title_text2">Relaxed Show Today !</string>
    <string name="toolbar_logo">toolbar_logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="licences">Powered by the movieDB</string>
    <string name="login_logo">login_logo</string>
    <string name="newcomers_here">Newcomers here ?</string>
    <string name="sign_up">Sign up !</string>
    <string name="image_banner">banner_img\n</string>
    <string name="desc_gambar_poster">desc_img_poster\n</string>
    <string name="released_year">released_year\n</string>
    <string name="rating">rating\n</string>
    <string name="overview">Overview</string>
    <string name="description">description</string>
    <string name="tombol_favorite">tombol_favorite</string>
    <string name="tv_empty_view">Nothing Found Here..</string>
    <string name="tv_toolbar">Movflix</string>
    <string name="tv_genre">Genre</string>
</resources>