<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detail_posterImg"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_broken_image_24"
            android:contentDescription="@string/image_banner"
            android:foreground="#4D000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/detail_posterTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_movie"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:fontFamily="@font/font_family"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="10"
            android:shadowDx="0"
            android:shadowDy="0"
            app:layout_constraintBottom_toBottomOf="@+id/detail_posterImg"
            app:layout_constraintEnd_toStartOf="@+id/detailFavoriteButton"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/detail_Img"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_broken_image_24"
            app:cardCornerRadius="4dp"
            app:cardMaxElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_posterImg">

            <ImageView
                android:id="@+id/poster_Img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_broken_image_24"
                android:contentDescription="@string/desc_gambar_poster"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/detail_movies_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:fontFamily="@font/font_family"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_Img"
            app:layout_constraintTop_toBottomOf="@+id/detail_posterImg" />

        <TextView
            android:id="@+id/detail_releasedYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/released_year"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_Img"
            app:layout_constraintTop_toBottomOf="@+id/detail_movies_name" />


        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:isIndicator="true"
            android:progressTint="@color/dark_orange"
            android:numStars="5"
            android:scaleX="1"
            android:scaleY="1"
            android:rating="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/detail_Img"
            app:layout_constraintTop_toBottomOf="@+id/detail_releasedYear" />
        
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/detail_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="rv_genre, detail_Img"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_Img"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar"
            tools:listitem="@layout/item_genre" />

        <TextView
            android:id="@+id/detail_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/overview"
            android:textSize="16sp"
            android:fontFamily="@font/font_family"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_barrier" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/description"
            android:textSize="12sp"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_synopsis"
            tools:targetApi="o" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/detailFavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_bookmark_24"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="@+id/detail_posterImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/tombol_favorite" />

        <ProgressBar
            android:id="@+id/loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>